doc: Fixed alignment and formatting in HTML documentation

--- a/doc/manual.css
+++ b/doc/manual.css
@@ -1,20 +1,13 @@
 body > * { max-width: 42em; }
-hr, div.header { max-width: 100%; }
-body {
-	font-family: sans-serif;
-	padding-left: 7.5em;
-	padding-right: 7.5em;
-}
+div.header { max-width: 100%; }
+hr { margin-left: 0; border: none; border-top: 3px double black; }
+ul, ol { max-width: 39.5em; padding-left: 2.5em; }
+div.example, div.display, div.indentedblock, div.smalldisplay, div.lisp, div.smallindentedblock, div.smallexample, div.smalllisp { max-width: 38.8em; margin-left: 3.2em; }
+blockquote { margin-left: 3.2em; margin-right: 3.2em; max-width: 35.6em; }
+body { font-family: sans-serif; padding-left: 7.5em; padding-right: 7.5em; }
 h1, h2, h3, h4, h5 { font-family: serif; }
 img { display: block; }
-div.float table, img {
-	margin-left: auto;
-	margin-right: auto;
-}
-div.float table, div.float th {
-	border-collapse: collapse;
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-}
+div.float table, img { margin-left: auto; margin-right: auto; }
+div.float table, div.float th { border-collapse: collapse; border-top: 1px solid black; border-bottom: 1px solid black; }
 div.float th, div.float td { padding: 0.5em; }
 dd > p:first-child { margin-top: 0; }
